--- a/Web/lab2/contacts.html
+++ b/Web/lab2/contacts.html
@@ -6,6 +6,7 @@
     <title>Контакты</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="logo.png">
   </head>
   <body>
     
@@ -45,7 +46,7 @@
   <div class="container-fluid">
     <div class="row justify-content-xxl-between justify-content-center"> <!-- Center the row -->
 
-      <div class="col-6 col-xxl-4 d-flex justify-content-center order-1 order-xxl-1"> <!-- Match width and alignment -->
+      <div class="col-6 col-xxl-4 d-flex justify-content-center"> <!-- Match width and alignment -->
         <ul class="nav flex-column">
           <h3>О нас</h3>
           <li>
@@ -55,7 +56,7 @@
         </ul>
       </div>
 
-      <div class="col-6 col-xxl-4 d-flex justify-content-center order-3 order-xxl-2"> <!-- Match width and alignment -->
+      <div class="col-6 col-xxl-4 d-flex justify-content-center"> <!-- Match width and alignment -->
         <ul class="nav flex-column">
           <h3>В соцсетях</h3>
           <li>ВКонтакте</li>
@@ -63,7 +64,7 @@
         </ul>
       </div>
 
-      <div class="col-6 mt-3 mt-xxl-0 col-xxl-4 d-flex justify-content-center order-2 order-xxl-3"> <!-- Match width and alignment -->
+      <div class="col-6 mt-3 mt-xxl-0 col-xxl-4 d-flex justify-content-center"> <!-- Match width and alignment -->
         <ul class="nav flex-column">
           <h3>Дополнительное</h3>
           <li>Что-то там</li>
