--- a/Web/lab2/index.html
+++ b/Web/lab2/index.html
@@ -6,12 +6,13 @@
     <title>News from far beyond</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="logo.png">
   </head>
   <body>
     
 <!--Navbar-->
-<nav class="navbar shadow-lg">
-  <div class="container-fluid justify-content-center justify-content-xxl-start"> <!-- Added justify-content-center -->
+<nav class="navbar shadow-lg fixed-top">
+  <div class="container-fluid justify-content-center justify-content-xxl-start"> 
     <a class="navbar-brand display-1" href="index.html">News from far beyond</a>
   </div>
 </nav>
@@ -183,7 +184,7 @@
 
 <!--Divider-->
 <div class="container-fluid">
-  <div class="row justify-content-center"> <!-- Center the row -->
+  <div class="row justify-content-center">
   <div class="col-10">
       <hr class="hr hr-blurry" />
   </div>
@@ -193,9 +194,9 @@
 <!--Footer-->
 <div class="footer py-3 mt-3 mb-5">
   <div class="container-fluid">
-    <div class="row justify-content-xxl-between justify-content-center"> <!-- Center the row -->
+    <div class="row justify-content-xxl-between justify-content-center">
 
-      <div class="col-6 col-xxl-4 d-flex justify-content-center order-1 order-xxl-1"> <!-- Match width and alignment -->
+      <div class="col-6 col-xxl-4 d-flex justify-content-center"> 
         <ul class="nav flex-column">
           <h3>О нас</h3>
           <li>
@@ -205,7 +206,7 @@
         </ul>
       </div>
 
-      <div class="col-6 col-xxl-4 d-flex justify-content-center order-3 order-xxl-2"> <!-- Match width and alignment -->
+      <div class="col-6 col-xxl-4 d-flex justify-content-center"> 
         <ul class="nav flex-column">
           <h3>В соцсетях</h3>
           <li>ВКонтакте</li>
@@ -213,7 +214,7 @@
         </ul>
       </div>
 
-      <div class="col-6 mt-3 mt-xxl-0 col-xxl-4 d-flex justify-content-center order-2 order-xxl-3"> <!-- Match width and alignment -->
+      <div class="col-6 mt-3 mt-xxl-0 col-xxl-4 d-flex justify-content-center"> 
         <ul class="nav flex-column">
           <h3>Дополнительное</h3>
           <li>Что-то там</li>
